Tidy up & fix sizes

--- a/db/configurations/scvo/templates/documents/evidence-library-document-search.hbs
+++ b/db/configurations/scvo/templates/documents/evidence-library-document-search.hbs
@@ -1,5 +1,5 @@
 <div class="library library-search">
-  {{> header_splash headerTextOverride="Evidence Library"}}
+  {{> header_splash headerTextOverride="Evidence Library" typeOverride="page"}}
   <div class="container-fluid">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
