--- a/db/configurations/scvo/templates/funding/funding-updates-link-gen.hbs
+++ b/db/configurations/scvo/templates/funding/funding-updates-link-gen.hbs
@@ -1,5 +1,5 @@
 <div class="funding-updates">
-  {{> header_splash headerTextOverride="Funding updates"}}
+  {{> header_splash headerTextOverride="Funding updates" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
