--- a/db/configurations/scvo/templates/jobs/cjs-job-phase.hbs
+++ b/db/configurations/scvo/templates/jobs/cjs-job-phase.hbs
@@ -1,5 +1,5 @@
 <div class="cjs-job-search">
-  {{> header_splash headerTextOverride="CJS vacancies"}}
+  {{> header_splash headerTextOverride="CJS vacancies" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
