--- a/db/configurations/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/db/configurations/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -1,5 +1,5 @@
 <div class="goodmoves-job-search">
-  {{> header_splash headerTextOverride="Job search"}}
+  {{> header_splash headerTextOverride="Job search" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
