--- a/db/configurations/scvo/templates/members/member-search.hbs
+++ b/db/configurations/scvo/templates/members/member-search.hbs
@@ -1,5 +1,5 @@
 <div class="members">
-  {{> header_splash headerTextOverride="Our members"}}
+  {{> header_splash headerTextOverride="Our members" typeOverride="page"}}
   <div class="container-fluid">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
