--- a/db/configurations/scvo/templates/posts/post-blogs.hbs
+++ b/db/configurations/scvo/templates/posts/post-blogs.hbs
@@ -1,5 +1,5 @@
 <div class="page posts blogs">
-  {{> header_splash headerTextOverride="Blogs"}}
+  {{> header_splash headerTextOverride="Blogs" typeOverride="page"}}
   <div class="container-fluid">
     {{> breadcrumbs_posts}}
     <div class="mdc-layout-grid">
