--- a/db/configurations/scvo/templates/posts/post-digital.hbs
+++ b/db/configurations/scvo/templates/posts/post-digital.hbs
@@ -1,5 +1,5 @@
 <div class="page digital">
-  {{> header_splash}}
+  {{> header_splash headerTextOverride="Digital blogs" typeOverride="page"}}
   <div class="container-fluid">
     {{> breadcrumbs}}
     <div class="mdc-layout-grid">
