--- a/db/configurations/scvo/templates/staff/staff-search.hbs
+++ b/db/configurations/scvo/templates/staff/staff-search.hbs
@@ -1,5 +1,5 @@
 <div class="staff-list">
-  {{> header_splash headerTextOverride="Staff team"}}
+  {{> header_splash headerTextOverride="Staff team" typeOverride="page"}}
   <div class="container-fluid">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
