--- a/db/configurations/scvo/templates/trustees/trustee.hbs
+++ b/db/configurations/scvo/templates/trustees/trustee.hbs
@@ -1,5 +1,5 @@
 <div class="trustee">
-  {{> header_splash headerTextOverride="Trustee vacancy"}}
+  {{> header_splash headerTextOverride="Trustee vacancy" typeOverride="page"}}
   <div class="container-fluid">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
