--- a/db/configurations/scvo/templates/events/event-policy-search.hbs
+++ b/db/configurations/scvo/templates/events/event-policy-search.hbs
@@ -1,5 +1,5 @@
 <div class="event event-search">
-  {{> header_splash headerTextOverride="Policy events"}}
+  {{> header_splash headerTextOverride="Policy events" typeOverride="page"}}
   <div class="container-fluid page-content">
     <ul class="breadcrumbs">
       <li><a href="/">Home</a></li>
