--- a/db/configurations/scvo/templates/main_search/search.hbs
+++ b/db/configurations/scvo/templates/main_search/search.hbs
@@ -1,5 +1,5 @@
 <div class="page search">
-  <!-- {{> header_splash headerTextOverride="Search"}} -->
+  <!-- {{> header_splash headerTextOverride="Search" typeOverride="page"}} -->
   <div class="container-fluid search-page">
     <form action="/search" method="GET" [searchroute]="'main_search'" data-auto-search="true" autocomplete="off">
       <div class="mdc-layout-grid">
