--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2846,7 +2846,13 @@ body.post.author {
   }
 }
 
-.full.scvo-document {
+.scvo-document.list {
+  margin-bottom: $unit;
+  .post-info-item {
+    margin-bottom: 0;
+  }
+}
+.scvo-document.full {
   margin: 0 0 $unit;
   .post-info {
     border: none;
@@ -2857,11 +2863,6 @@ body.post.author {
     margin: 0;
     list-style-type: none;
     padding: 0;
-  }
-}
-.list.scvo-document {
-  .post-info-item {
-    margin-bottom: 0;
   }
 }
 
@@ -2886,6 +2887,7 @@ body.post.author {
     float: left;
   }
   dt {
+    font-weight: 600;
     clear: both;
     width: 30%;
   }
