--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2885,6 +2885,7 @@ body.post.author {
   margin: 0;
   dt, dd {
     float: left;
+    margin: 0 0 $unit;
   }
   dt {
     font-weight: 600;
@@ -2892,8 +2893,14 @@ body.post.author {
     width: 30%;
   }
   dd {
-    margin: 0;
+    // margin: 0;
     width: 70%;
+    .fa-ul {
+      margin-left: $unit*1.5;
+      a {
+        word-wrap: break-word;
+      }
+    }
   }
 }
 .cjs-job-search .inline-dl,
