--- a/db/configurations/scvo/templates/pages/page-home.hbs
+++ b/db/configurations/scvo/templates/pages/page-home.hbs
@@ -148,7 +148,8 @@
     </h2>
   </div>
   {{#with data.supplimentaryResponses.blogs_latest.hits.hits.[0] ~}}
-  <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}>
+  <!-- <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}> -->
+  <div class="featured-text">
     <div class="container-fluid">
       {{{_source.rendered.scvo_featured}}}
     </div>
@@ -188,7 +189,8 @@
     </h2>
   </div>
   {{#with data.supplimentaryResponses.press_latest.hits.hits.[0] ~}}
-  <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}>
+  <!-- <div {{#if _source.header_background}}class="featured-background-image" style="background-image: url('{{_source.header_background}}');"{{else}}class="featured-text"{{/if}}> -->
+  <div class="featured-text">
     <div class="container-fluid">
       {{{_source.rendered.scvo_featured}}}
     </div>
