--- a/db/configurations/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/configurations/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -158,6 +158,9 @@
               </p>
             </div>
           </div>
+          <p>
+            <strong>NB.</strong> This information applies to citizens of the EU27, minus citizens of Ireland, whose right to live and reside in the UK will be unaffected by EU withdrawal. Discussions regarding the future right of citizens from Norway, Iceland, Liechtenstein remain ongoing.
+          </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
           {{> menu_eu_are_valued}}
