--- a/db/configurations/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
+++ b/db/configurations/scvo/templates/pages/page-eu-are-valued-settled-status.hbs
@@ -159,7 +159,8 @@
             </div>
           </div>
           <p>
-            <strong>NB.</strong> This information applies to citizens of the EU27, minus citizens of Ireland, whose right to live and reside in the UK will be unaffected by EU withdrawal. Discussions regarding the future right of citizens from Norway, Iceland, Liechtenstein remain ongoing.
+            <br />
+            <strong>NB.</strong> This information applies to citizens of the "EU27" minus citizens of Ireland (whose right to live and reside in the UK will be unaffected by EU withdrawal). Those states are Austria, Belgium, Bulgaria, Croatia, Cyprus, Czechia, Denmark, Estonia, Finland, France, Germany, Greece, Hungary, Italy, Latvia, Lithuania, Luxembourg, Malta, the Netherlands, Poland, Portugal, Romania, Slovakia, Slovenia, Spain, and Sweden. Discussions regarding the future right of citizens from the EFTA states (Iceland, Liechtenstein, Norway, and Switzerland) are ongoing.
           </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
