--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -1,40 +1,44 @@
-<section class="search">
-  <div class="container-fluid">
-    <h3>Find you new job?</h3>
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner">
-        <div id="tt-what" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-12-phone">
-          <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute typeahead"
-          placeholder="What are you looking for" id="what" name="what">
+<section id="search-overlay" class="search-overlay">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-form-field">
+          <input type="text" class="mdc-text-field__input fullwidth typeahead" placeholder="What are you looking for?" id="what">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-12-phone">
-          <select class="mdc-selectfield" id="distance" name="distance">
-            <option value="any">Any distance from</option>
-            <option value="1609.344">1 miles from</option>
-            <option value="3218.688">2 miles from</option>
-            <option value="8046.72" selected>5 miles from</option>
-            <option value="16093.44">10 miles from</option>
-            <option value="24140.16">15 miles from</option>
-            <option value="40233.6">25 miles from</option>
-            <option value="80467.2">50 miles from</option>
-          </select>
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
+        <div class="mdc-form-field">
+          <div class="mdc-select" data-mdc-auto-init="MDCSelect">
+            <select class="mdc-select__native-control fullwidth" id="distance">
+              <option value="any">Any distance</option>
+              <option value="1609.344">1 miles</option>
+              <option value="3218.688">2 miles</option>
+              <option value="8046.72" selected>5 miles</option>
+              <option value="16093.44">10 miles</option>
+              <option value="24140.16">15 miles</option>
+              <option value="40233.6">25 miles</option>
+              <option value="80467.2">50 miles</option>
+            </select>
+            from
+          </div>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-12-phone">
-          <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute"
-          placeholder="Where are you looking" id="where" name="where">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
+        <div class="mdc-form-field">
+          <input type="text" class="mdc-text-field__input fullwidth" placeholder="Where are you looking" id="where">
         </div>
       </div>
     </div>
-    <div id="search-terms" class="mdc-chip-set"></div>
   </div>
+  <div id="search-terms" class="mdc-chip-set"></div>
+  <button type="button" id="detailed-results" class="mdc-button mdc-button--raised">Detailed results</button>
 </section>
 <section class="search-results">
   <div id="map-full"></div>
+</section>
+<section>
   <div class="container-fluid">
-    <div id="search-results-info">
-      <strong>Total:</strong> <span id="search-results-total"></span>
-    </div>
-    <div id="search-results"></div>
+    {{> login}}
   </div>
 </section>
 {{> currently_recruiting}}
