Goodmoves style and frontend tidying up (just started)

--- a/db/configurations/goodmoves/partials/login.hbs
+++ b/db/configurations/goodmoves/partials/login.hbs
@@ -8,8 +8,16 @@
   <div class="login-form-section" id="form-section-email">
     <div class="row">
       <div class="six columns">
-        <label for="login-email">Email address</label>
-        <input type="email" id="login-email" placeholder="me@there.co.uk" class="u-full-width">
+        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+          <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="login-email">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="login-email">Email</label>
+          <div class="mdc-notched-outline">
+            <svg>
+              <path class="mdc-notched-outline__path"/>
+            </svg>
+          </div>
+          <div class="mdc-notched-outline__idle"></div>
+        </div>
       </div>
       <div class="six columns">
         <label for="login-password">Password</label>
