--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -2,8 +2,15 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-        <div class="mdc-form-field">
-          <input type="text" class="mdc-text-field__input fullwidth typeahead" placeholder="What are you looking for?" id="what">
+        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+          <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="what">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="what">What</label>
+          <div class="mdc-notched-outline">
+            <svg>
+              <path class="mdc-notched-outline__path"/>
+            </svg>
+          </div>
+          <div class="mdc-notched-outline__idle"></div>
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
@@ -24,8 +31,15 @@
         </div>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-        <div class="mdc-form-field">
-          <input type="text" class="mdc-text-field__input fullwidth" placeholder="Where are you looking" id="where">
+        <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
+          <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where">
+          <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Where</label>
+          <div class="mdc-notched-outline">
+            <svg>
+              <path class="mdc-notched-outline__path"/>
+            </svg>
+          </div>
+          <div class="mdc-notched-outline__idle"></div>
         </div>
       </div>
     </div>
