--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -2039,34 +2039,43 @@ form#settled_status {
   }
 }
 .credit-union .splash-image .splash-overlay .container-fluid {
-  min-height: $unit*9;
+  min-height: $unit*10;
   .mdc-layout-grid {
-    margin: $unit*2 0;
+    margin: $unit*3 0;
   }
   img.header-text {
     max-height: $unit*6;
   }
 }
 .credit-union {
-  .cu-hero {
-    background-image: url('https://members.scvocreditunion.scot/images/scvo-hero.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    align-items: center;
-    padding: $unit*1.5 0;
-    .mdc-layout-grid {
-      padding: 0 $unit*1.5;
+  // .cu-hero {
+  //   background-image: url('https://members.scvocreditunion.scot/images/scvo-hero.png');
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
+  //   background-position: center center;
+  //   display: flex;
+  //   align-items: center;
+  //   padding: $unit*1.5 0;
+  //   .mdc-layout-grid {
+  //     padding: 0 $unit*1.5;
+  //     width: 100%;
+  //     .mdc-button {
+  //       display: inline-grid;
+  //       height: auto;
+  //       width: 100%;
+  //     }
+  //   }
+  //   img {
+  //     display: none;
+  //   }
+  // }
+  .mdc-layout-grid {
+    margin-bottom: $unit*1.25;
+    width: 100%;
+    .mdc-button {
+      display: inline-grid;
+      height: auto;
       width: 100%;
-      .mdc-button {
-        display: inline-grid;
-        height: auto;
-        width: 100%;
-      }
-    }
-    img {
-      display: none;
     }
   }
 }
