--- a/db/configurations/digitalparticipation/templates/resources-detail.hbs
+++ b/db/configurations/digitalparticipation/templates/resources-detail.hbs
@@ -92,6 +92,15 @@
 
       <dl>
         <dt>
+          <a href="https://doteveryone.org.uk/wp-content/uploads/2018/04/Doteveryone_PeoplePowerTechDigitalUnderstanding2018.pdf">People, Power and Technology: The 2018 Digital Understanding Report</a>
+        </dt>
+        <dd>
+          This report sets out a model for digital understanding that looks beyond digital skills to what it is people need to be able to understand about the impact of tech on their lives as individuals, consumers, workers and members of society.
+        </dd>
+      </dl>
+
+      <dl>
+        <dt>
           <a href="https://www.cas.org.uk/publications/launch-disconnected-understanding-digital-inclusion-and-improving-access">Disconnected: Understanding Digital Inclusion and Improving Access</a>
         </dt>
         <dd>
