--- a/db/configurations/scvo/partials/menu-charity-awards.hbs
+++ b/db/configurations/scvo/partials/menu-charity-awards.hbs
@@ -7,25 +7,28 @@
 <div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="http://www.scvo.org.uk" target="_blank" class="sponsor" title="Scottish Council for Voluntary Organisations"  style="background-image:url('https://goodhq.org/images/charityawards/logos/scvo-logo-200x200.png');"></a>
+      <a href="http://www.scvo.org.uk" target="_blank" class="sponsor" title="Scottish Council for Voluntary Organisations"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/scvo-logo-200x200.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="http://www.cafonline.org" target="_blank" class="sponsor" title="Charities Aid Foundation"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/caf_logo_new.png');"></a>
+      <a href="http://www.cafonline.org" target="_blank" class="sponsor" title="Charities Aid Foundation"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/caf-logo-200x200.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="http://www.keegan-pennykid.com" target="_blank" class="sponsor" title="Keegan & Pennykid"  style="background-image:url('https://goodhq.org/images/charityawards/logos/kandp-logo-200x200.png');"></a>
+      <a href="http://www.keegan-pennykid.com" target="_blank" class="sponsor" title="Keegan & Pennykid"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/kandp-logo-200x200.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="http://www.oscr.org.uk" target="_blank" class="sponsor" title="Office of the Scottish Charity Regulator"  style="background-image:url('https://goodhq.org/images/charityawards/logos/oscr-logo-200x200.png');"></a>
+      <a href="http://www.oscr.org.uk" target="_blank" class="sponsor" title="Office of the Scottish Charity Regulator"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/oscr-logo-200x200.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="https://beta.gov.scot/policies/digital/" target="_blank" class="sponsor" title="Scottish Government - Digital Scotland"  style="background-image:url('https://goodhq.org/images/charityawards/logos/digiscot-logo-200x200.png');"></a>
+      <a href="https://beta.gov.scot/policies/digital/" target="_blank" class="sponsor" title="Scottish Government - Digital Scotland"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/digiscot-logo-200x200.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="http://www.sgn.co.uk" target="_blank" class="sponsor" title="SGN"  style="background-image:url('https://goodhq.org/images/charityawards/logos/sgn-logo-200x200.png');"></a>
+      <a href="http://www.sgn.co.uk" target="_blank" class="sponsor" title="SGN"  style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/sgn-logo-200x200.png');"></a>
     </div>
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-      <a href="http://cldstandardscouncil.org.uk" target="_blank" class="sponsor" title="CLD Standards Council Scotland" style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/cld_logo.jpg'); background-size: 80%; background-repeat: no-repeat;"></a>
+      <a href="http://cldstandardscouncil.org.uk" target="_blank" class="sponsor" title="CLD Standards Council Scotland" style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/cld-logo-200x200.png'); background-size: 80%; background-repeat: no-repeat;"></a>
+    </div>
+    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+      <a href="https://goodmoves.com" target="_blank" class="sponsor" title="Goodmoves" style="background-image:url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/charity-awards/goodmoves-logo-200x200.png'); background-size: 80%; background-repeat: no-repeat;"></a>
     </div>
   </div>
 </div>
