Fixed bug that stopped live RSS feed from working (used by TFN)

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -17,6 +17,12 @@ $mobile-landscape-breakpoint: 959px;
 @import url('//cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css');
 @import url('//fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:400,600');
 
+header {
+  .container-fluid {
+    padding: 0;
+  }
+}
+
 /* Typeahead */
 .twitter-typeahead {
   width: 100%;
@@ -69,7 +75,7 @@ $mobile-landscape-breakpoint: 959px;
 
 .search-overlay-terms {
   margin-top: 15px;
-  input, select { 
+  input, select {
     font-size: 1rem;
   }
 }
@@ -182,7 +188,6 @@ body {
     }
   }
 }
-
 
 footer {
   border-top: .6rem solid $mdc-theme-primary-light;
@@ -338,7 +343,7 @@ footer {
 @media (min-width: $mobile-breakpoint + 1) and (max-width: $mobile-landscape-breakpoint) {
   .hide-md {
     display: none;
-  }  
+  }
 }
 
 @media (min-width: $mobile-landscape-breakpoint + 1) {
