--- a/assets/css/scvo-styles.scss
+++ b/assets/css/scvo-styles.scss
@@ -830,6 +830,8 @@ img.responsive {
 .mdc-typography,
 .mdc-card__subtitle,
 .mdc-textfield__input,
+.mdc-typography--body1,
+.mdc-typography--body2,
 .mdc-typography--title,
 .mdc-card__title--large,
 .mdc-typography--caption,
