--- a/db/configurations/goodmoves/templates/errors/404.hbs
+++ b/db/configurations/goodmoves/templates/errors/404.hbs
@@ -32,7 +32,7 @@
     {{/compare ~}}
     {{/each ~}}
     {{else}}
-    <h3>Try searching for a topic</h3>
+    <!-- <h3>Try searching for a topic</h3> -->
     {{/ifAll ~}}
 
     <script>
