--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -94,6 +94,7 @@ p,
 .mdc-typography--body1,
 .mdc-typography--body2,
 .mdc-typography--title,
+.mdc-text-field__input,
 .mdc-card__title--large,
 .mdc-typography--caption,
 .mdc-typography--headline,
@@ -122,6 +123,10 @@ a {
 }
 a:hover {
   text-decoration: underline;
+}
+
+.mdc-chip {
+  color: white
 }
 
 .mdc-button a:hover,
@@ -177,13 +182,14 @@ a:hover {
   }
 }
 
+.mdc-form-field,
+.mdc-select,
 .mdc-text-field {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
 }
-
 
 /* Typeahead */
 .twitter-typeahead {
