--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -33,7 +33,7 @@
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
           <div class="mdc-text-field mdc-text-field--outlined" data-mdc-auto-init="MDCTextField">
-            <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where">
+            <input type="text" class="mdc-text-field__input mdc-text-field--fullwidth" id="where" placeholder="">
             <label class="mdc-floating-label mdc-floating-label--float-above" for="where">Where</label>
             <div class="mdc-notched-outline">
               <svg>
