--- a/db/configurations/goodmoves/partials/vacancy/map-view.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/map-view.hbs
@@ -1,15 +1,19 @@
 <div class="map-content">
   <h3>{{title}}</h3>
+  {{#if organisation.name}}
   <div>
     <strong>{{organisation.name}}</strong>
   </div>
+  {{/if}}
   <div>
+    {{#if closing_date}}
     <span class="far fa-calendar-alt fw" title="Closing date"></span>
     {{{momentFormat (moment closing_date "x") "Do MMMM YYYY"}}}
+    {{/if}}
     <span class="far fa-money-bill-alt fa-fw" title="Salary"></span>
-    {{>salary}}
+    {{> salary}}
   </div>
   <div class="text-right">
-    <a href="#">View details</a>
+    <a href="/vacancy/{{slug}}" class="mdc-card__action">Find out more</a>
   </div>
 </div>
