--- a/db/configurations/goodmoves/templates/pages/home.hbs
+++ b/db/configurations/goodmoves/templates/pages/home.hbs
@@ -27,7 +27,7 @@
                 <option value="40233.6">25 miles</option>
                 <option value="80467.2">50 miles</option>
               </select>
-              from
+              <!-- from -->
             </div>
           </div>
         </div>
