--- a/db/configurations/goodmoves/partials/vacancy/results-view.hbs
+++ b/db/configurations/goodmoves/partials/vacancy/results-view.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card">
+<div class="mdc-card" data-vacancy-id="{{Id}}">
   <div class="search-result-card__info-row">
     <div class="mdc-card__media mdc-card__media--square demo-card__media search-result-card__media--organisation" style="background-image:url({{organisation.logo_url}});"></div>
     <div class="search-result-card__info">
